💄 fix: improve contrast on `code` within links on hover
Fixes #106.

--- a/sass/parts/_code.scss
+++ b/sass/parts/_code.scss
@@ -37,6 +37,10 @@ code {
     }
 }
 
+a:hover code {
+    background-color: inherit;
+}
+
 pre {
     overflow: hidden;
     position: relative;
